[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scene_scripts/DeveloperConsole.gd" id="1_osu66"]
[ext_resource type="Script" path="res://scene_scripts/DeveloperConsole_LineEdit.gd" id="2_2kibf"]

[node name="DeveloperConsole" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_osu66")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 537.0
offset_right = 1129.0
offset_bottom = 627.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Developer Console -- insert anything in the textbox for wacky stuff!"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
script = ExtResource("2_2kibf")

[connection signal="focus_entered" from="VBoxContainer/LineEdit" to="." method="_on_line_edit_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/LineEdit" to="." method="_on_line_edit_focus_exited"]
[connection signal="text_submitted" from="VBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
